# OriLang

./: .gitignore  BOUNTY_SUMMARY.md  CMakeLists.txt  CONTRIBUTING.md  README.md  build.cmd  build.ps1  build.sh  golden_test.sh  make_underflow.py  ori.cmd  ori.ps1  test_arr.ori
.claude/: launch.json
app-web/: meta
core/: build.cmd  build.sh  chacha20.h  orivm.c  sha256.h  test_empty.ori  test_stdlib_basics.ori  test_url_safe.ori
docs/: ARCHITECTURE.md  BEGINNER_LEARNING_PATH.md  BEGINNER_PITFALLS.md  BOUNTY.md  CHEATSHEET.md  CONTRIBUTING.md  PITFALLS.md  SAMPLES.md  TOOLCHAIN.md  beginner_learning_path.md  cheatsheet-hold-when-say.md  cheatsheet.md  common_pitfalls.md
examples/: hello.ori  ori_in_ori.ori
samples/: array_push.ori  beginner_01_hello.ori  beginner_02_variables.ori  beginner_03_loops.ori  beginner_04_conditionals.ori  beginner_05_functions.ori  beginner_06_strings.ori  beginner_07_arrays.ori  beginner_08_when_chain.ori  beginner_09_math_chain.ori  beginner_10_bool_logic.ori  beginner_11_countdown.ori  beginner_12_max_of_two.ori  beginner_13_double_loop.ori  beginner_14_sum_range.ori  beginner_15_echo_twice.ori  beginner_16_min_of_two.ori  beginner_17_triple_say.ori  beginner_18_add_three.ori  beginner_19_zero_check.ori  beginner_20_pair_sum.ori  beginner_21_countdown.ori  beginner_22_min_max.ori  beginner_23_fizzbuzz.ori  beginner_24_factorial.ori  beginner_25_string_join.ori  beginner_26_temperature_convert.ori  beginner_27_countdown.ori  beginner_27_even_odd.ori  beginner_28_absolute_diff.ori  beginner_28_max_of_three.ori  beginner_33_min_max.ori  (+38 more)
(+151 files in other folders)
